frontend/public/css/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400');


* {
font-family: 'Open Sans', sans-serif;
overflow-x: hidden;
}
.mainobal {
width: 1200px;
background-color: #EDEDED;
box-shadow: 0px 0px 50px 2px gray;
}
.bodyDiv {
background-color: #DBDBDB;
}
#line {
border-bottom: 3px solid #157878;
}
#navigatorIndex, #navigator {
  background-color: #292e48;
  font-size: 18px;
  font-weight: 400;
  font-family: 'Open Sans', sans-serif;
}
#headyIndex {
max-height: 70vh;
}
.pageSekce {
height: 100vh;

}
.onasSekce {
background-image: url("../images/bckgrnd.png");
background-size: contain;
}
.svgPerson:hover {
  opacity: 0.9;
  transition: all 0.3s ease-out;
}
.onasCards {
  height: 250px;
  width: 250px;
}
.card-img {
border: 1px solid #bbbbbb;
height: 230px;
background-size: cover;
background-position: center;
background-repeat: no-repeat;
}
#card1, #card4 {
background-image: url("../images/scr1.png");
}
#card2 {
background-image: url("../images/scr2.png");
}
#card3 {
background-image: url("../images/scr3.png");
}
#card1:hover, #card4:hover{
  transform: translateY(-3px);
  opacity: 0.9;
background-image: url("../images/scr1Hover.png");
  transition: all 0.3s ease-out;
}
#card2:hover{
  transform: translateY(-3px);
  opacity: 0.9;
background-image: url("../images/scr2Hover.png");
  transition: all 0.3s ease-out;
}

#card3:hover{
  transform: translateY(-3px);
  opacity: 0.9;
background-image: url("../images/scr3Hover.png");
  transition: all 0.3s ease-out;
}

